force-app/main/default/objects/Promotion__c/fields/AreQualItemsExclFromDiscounts__c.field-meta.xml
<CustomField>
    <fullName>AreQualItemsExclFromDiscounts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude qualifying items from discounts</label>
    <type>Checkbox</type>
</CustomField>