force-app/main/default/objects/Promotion__c/fields/CampaignId__c.field-meta.xml
<CustomField>
    <fullName>CampaignId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign ID</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Promotion</relationshipLabel>
    <relationshipName>Promotion</relationshipName>
    <type>Lookup</type>
</CustomField>