force-app/main/default/objects/Promotion__c/fields/DiscountRestriction__c.field-meta.xml
<CustomField>
    <fullName>DiscountRestriction__c</fullName>
    <label>Discount Restriction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>LeastExpensive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>