force-app/main/default/objects/Promotion__c/fields/EndDatetime__c.field-meta.xml
<CustomField>
    <fullName>EndDatetime__c</fullName>
    <label>End Datetime</label>
    <type>DateTime</type>
</CustomField>