force-app/main/default/objects/Promotion__c/fields/IsAutomatic__c.field-meta.xml
<CustomField>
    <fullName>IsAutomatic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automatic</label>
    <type>Checkbox</type>
</CustomField>