force-app/main/default/objects/Promotion__c/fields/IsCommercePromotion__c.field-meta.xml
<CustomField>
    <fullName>IsCommercePromotion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commerce Promotion</label>
    <type>Checkbox</type>
</CustomField>