force-app/main/default/objects/Promotion__c/fields/IsTiered__c.field-meta.xml
<CustomField>
    <fullName>IsTiered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tiered Promotion</label>
    <type>Checkbox</type>
</CustomField>