force-app/main/default/objects/Promotion__c/fields/MaximumApplicationsPerCart__c.field-meta.xml
<CustomField>
    <fullName>MaximumApplicationsPerCart__c</fullName>
    <label>Maximum Applications Per Cart</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>