force-app/main/default/objects/Promotion__c/fields/PriorityNumber__c.field-meta.xml
<CustomField>
    <fullName>PriorityNumber__c</fullName>
    <label>Priority Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>