force-app/main/default/objects/Promotion__c/fields/QualifierCriteria__c.field-meta.xml
<CustomField>
    <fullName>QualifierCriteria__c</fullName>
    <label>Qualifier Criteria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Any</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>