force-app/main/default/objects/Promotion__c/fields/StartDatetime__c.field-meta.xml
<CustomField>
    <fullName>StartDatetime__c</fullName>
    <label>Start Datetime</label>
    <type>DateTime</type>
</CustomField>