force-app/main/default/objects/Promotion__c/fields/TargetCriteria__c.field-meta.xml
<CustomField>
    <fullName>TargetCriteria__c</fullName>
    <label>Target Criteria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Any</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>