force-app/main/default/objects/Promotion__c/fields/TermsAndConditions__c.field-meta.xml
<CustomField>
    <fullName>TermsAndConditions__c</fullName>
    <label>Terms and Conditions</label>
    <length>4000</length>
    <type>Html</type>
</CustomField>